--- a/locale/tcf-lang-de_DE.po
+++ b/locale/tcf-lang-de_DE.po
@@ -13,116 +13,223 @@ msgstr ""
 "X-Poedit-Language: German\n"
 "X-Poedit-Country: GERMANY\n"
 "X-Poedit-SourceCharset: utf-8\n"
-"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;\n"
+"X-Poedit-KeywordsList: __;_e;__ngettext:1,2;_n:1,2;__ngettext_noop:1,2;_n_noop:1,2;_c,_nc:4c,1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;_nx_noop:4c,1,2;\n"
 "X-Poedit-Basepath: \n"
 "X-Poedit-Bookmarks: \n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Textdomain-Support: yes"
 
-#: tiny-contact-form.php:80
-#: tiny-contact-form.php:349
+#: tiny-contact-form.php:104
+#: tiny-contact-form.php:509
 #@ tcf-lang
 msgid "Name"
 msgstr "Name"
 
-#: tiny-contact-form.php:82
-#: tiny-contact-form.php:351
+#: tiny-contact-form.php:106
+#: tiny-contact-form.php:511
 #@ tcf-lang
 msgid "Email"
 msgstr "Email"
 
-#: tiny-contact-form.php:84
-#: tiny-contact-form.php:353
+#: tiny-contact-form.php:120
+#: tiny-contact-form.php:513
 #@ tcf-lang
 msgid "Subject"
 msgstr "Betreff"
 
-#: tiny-contact-form.php:86
-#: tiny-contact-form.php:355
+#: tiny-contact-form.php:122
+#: tiny-contact-form.php:515
 #@ tcf-lang
 msgid "Your Message"
 msgstr "Deine Nachricht"
 
-#: tiny-contact-form.php:160
+#: tiny-contact-form.php:285
+#@ default
 msgid "Sorry, but you have no permissions to change settings."
 msgstr "Du hast keine Berechtigungen diese Einstellungen zu ändern."
 
-#: tiny-contact-form.php:199
+#: tiny-contact-form.php:340
 #@ tcf-lang
 msgid "TO:"
 msgstr "Empfänger:"
 
-#: tiny-contact-form.php:200
-#: tiny-contact-form.php:204
+#: tiny-contact-form.php:341
+#: tiny-contact-form.php:345
+#@ default
 msgid "E-mail"
 msgstr "E-mail"
 
-#: tiny-contact-form.php:203
+#: tiny-contact-form.php:344
 #@ tcf-lang
 msgid "FROM:"
 msgstr "Absender:"
 
-#: tiny-contact-form.php:204
-#: tiny-contact-form.php:216
+#: tiny-contact-form.php:344
+#: tiny-contact-form.php:356
+#: tiny-contact-form.php:360
 #@ tcf-lang
 msgid "(optional)"
 msgstr "(optional)"
 
-#: tiny-contact-form.php:207
+#: tiny-contact-form.php:348
 #@ tcf-lang
 msgid "Message OK:"
 msgstr "Erfolgsmeldung:"
 
-#: tiny-contact-form.php:211
+#: tiny-contact-form.php:352
 #@ tcf-lang
 msgid "Message Error:"
 msgstr "Fehlermeldung:"
 
-#: tiny-contact-form.php:228
+#: tiny-contact-form.php:405
 #@ tcf-lang
 msgid "StyleSheet:"
 msgstr "StyleSheet:"
 
-#: tiny-contact-form.php:238
+#: tiny-contact-form.php:415
+#@ default
 msgid "Save Changes"
 msgstr "Einstellungen speichern"
 
-#: tiny-contact-form.php:359
+#: tiny-contact-form.php:521
 #@ tcf-lang
 msgid "Check these fields:"
 msgstr "Überprüfe die Felder:"
 
-#: tiny-contact-form.php:229
+#: tiny-contact-form.php:406
 #@ tcf-lang
 msgid "reset"
 msgstr "zurücksetzen"
 
-#: tiny-contact-form.php:233
+#: tiny-contact-form.php:410
 #@ tcf-lang
 msgid "Use this field or the <code>style.css</code> in your theme directory."
 msgstr "Benutze dieses Feld oder die <code>style.css</code> in deinem Theme-Verzeichnis."
 
-#: tiny-contact-form.php:215
+#: tiny-contact-form.php:356
 #@ tcf-lang
 msgid "Submit Button:"
 msgstr "Senden Button:"
 
-#: tiny-contact-form.php:219
-#@ tcf-lang
-msgid "Captcha:"
-msgstr "Captcha:"
-
-#: tiny-contact-form.php:223
+#: tiny-contact-form.php:385
 #@ tcf-lang
 msgid "Captcha Label:"
 msgstr "Captcha Label:"
 
-#: tiny-contact-form.php:393
+#: tiny-contact-form.php:554
+#@ default
 msgid "Settings"
 msgstr "Einstellungen"
 
-#: tiny-contact-form.php:220
+#: tiny-contact-form.php:382
 #@ tcf-lang
 msgid "use a little mathematic spam test like \" 12 + 5 = \""
 msgstr "kleinen Mathetest als Spamschutz z.B. \" 12 + 5 = \""
+
+#: tiny-contact-form.php:174
+#@ tcf-lang
+msgid "Please fill out all fields."
+msgstr "Bitte fülle alle Felder aus."
+
+#: tiny-contact-form.php:177
+#@ tcf-lang
+msgid "Wrong Email."
+msgstr "Ungültige Email."
+
+#: tiny-contact-form.php:341
+#@ tcf-lang
+msgid "one or more (e.g. email1,email2,email3)"
+msgstr "wenn mehrere, mit Komma trennen (email1,email2,email3)"
+
+#: tiny-contact-form.php:360
+#@ tcf-lang
+msgid "Subject Prefix:"
+msgstr "Betreffspräfix:"
+
+#: tiny-contact-form.php:331
+#@ cpd
+msgid "Options"
+msgstr ""
+
+#: tiny-contact-form.php:337
+#@ tcf-lang
+msgid "Form"
+msgstr "Formular"
+
+#: tiny-contact-form.php:364
+#@ tcf-lang
+msgid "Additional Fields:"
+msgstr "Zusätzliche Felder:"
+
+#: tiny-contact-form.php:366
+#@ tcf-lang
+msgid "The contact form includes the fields Name, Email, Subject and Message. If you need more (e.g. Phone, Website) type in the name of the field."
+msgstr "Das Kontaktformular enthält die Felder Name, Email, Betreff und Nachricht. Wenn du weitere (wie Telefon, Webseite) brauchst, gibt hier die Namen ein."
+
+#: tiny-contact-form.php:369
+#@ tcf-lang
+msgid "Field"
+msgstr "Feld"
+
+#: tiny-contact-form.php:374
+#@ tcf-lang
+msgid "After Submit"
+msgstr "Nach dem Absenden"
+
+#: tiny-contact-form.php:375
+#@ tcf-lang
+msgid "hide the form"
+msgstr "Formular verstecken"
+
+#: tiny-contact-form.php:378
+#: tiny-contact-form.php:381
+#@ tcf-lang
+msgid "Captcha"
+msgstr "Anti-Spam"
+
+#: tiny-contact-form.php:389
+#@ tcf-lang
+msgid "Alternative Captcha:"
+msgstr "Alternatives Captcha:"
+
+#: tiny-contact-form.php:390
+#@ tcf-lang
+msgid "Set you own question and answer."
+msgstr "Gibt deine eigene Frage und die erwartete Antwort an."
+
+#: tiny-contact-form.php:393
+#@ tcf-lang
+msgid "Question:"
+msgstr "Frage:"
+
+#: tiny-contact-form.php:397
+#@ tcf-lang
+msgid "Answer:"
+msgstr "Antwort:"
+
+#: tiny-contact-form.php:401
+#@ tcf-lang
+msgid "Style"
+msgstr "Design"
+
+#: tiny-contact-form.php:431
+#@ tcf-lang
+msgid "Contact"
+msgstr "Kontakt"
+
+#: tiny-contact-form.php:435
+#@ tcf-lang
+msgid "Bug? Problem? Question? Hint? Praise?"
+msgstr "Bug? Problem? Frage? Tipp? Lob?"
+
+#: tiny-contact-form.php:436
+#, php-format
+#@ tcf-lang
+msgid "Write a comment on the <a href=\"%s\">plugin page</a>."
+msgstr "Schreib einen Kommentar auf der  <a href=\"%s\">Plugin-Seite</a>."
+
+#: tiny-contact-form.php:437
+#@ default
+msgid "License"
+msgstr ""
 
